--- a/themes/default/templates/base_delete.html
+++ b/themes/default/templates/base_delete.html
@@ -17,7 +17,7 @@
 {% endblock %}
 
 {% block main %}
-<form method="post" action="{{ request.path }}{% if next %}?next={{ next }}{% endif %}">
+<form method="post" action="{{ request.path }}{% if next and next != object.get_absolute_url %}?next={{ next }}{% endif %}">
     {% csrf_token %}
     {% model_name object as model %}
     {% block message %}<p>{% blocktrans %}Are you sure you want to delete this {{ model }}?{% endblocktrans %}</p>{% endblock %}
