Fixed permission issue with hard copies.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@911 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/hr/timesheet_hardcopies.html
+++ b/themes/default/templates/hr/timesheet_hardcopies.html
@@ -20,7 +20,7 @@
 {% include "elements/filterbox.html" %}
 <div class="actions">
     <ul>
-        {% if perms.documents.add_hard_copy %}
+        {% if object.object_id in obj_perms.hr.change_timesheet %}
         <li class="add"><a title="{% trans 'Add' %}" href="{% url timesheet_add_hardcopy object.object_id %}">{% trans 'Add' %}</a></li>
         {% endif %}
     </ul>
