--- a/themes/default/templates/hr/expensevoucher_hardcopies.html
+++ b/themes/default/templates/hr/expensevoucher_hardcopies.html
@@ -20,7 +20,7 @@
 {% include 'elements/filterbox.html' %}
 <div class="actions">
     <ul>
-        {% if perms.documents.add_hard_copy %}
+        {% if object.object_id in obj_perms.hr.change_expensevoucher %}
         <li class="add"><a title="{% trans 'Add' %}" href="{% url expensevoucher_add_hardcopy object.object_id %}">{% trans 'Add' %}</a></li>
         {% endif %}
     </ul>
