--- a/themes/default/templates/documents/document_delete.html
+++ b/themes/default/templates/documents/document_delete.html
@@ -4,14 +4,19 @@
 {% load details %}
 
 {% block meta_title %}
-{% blocktrans with model=object.content_type.name %}Delete {{ model }}{% endblocktrans %}
+{% model_name object.content_type.model_class as model %}
+{% blocktrans %}Delete {{ model }}{% endblocktrans %}
 {% endblock %}
 
 {% block title %}
+{% model_name object.content_type.model_class as model %}
 <div class="title">
     <h1>{{ object|striptags|capfirst }}</h1>
-    <h2>{% blocktrans with model=object.content_type.name %}Delete {{ model }}{% endblocktrans %}</h2>
+    <h2>{% blocktrans %}Delete {{ model }}{% endblocktrans %}</h2>
 </div>
 {% endblock %}
 
-{% block message %}<p>{% blocktrans with model=object.content_type.name %}Are you sure you want to delete this {{ model }}?{% endblocktrans %}</p>{% endblock %}
+{% block message %}
+{% model_name object.content_type.model_class as model %}
+<p>{% blocktrans %}Are you sure you want to delete this {{ model }}?{% endblocktrans %}</p>
+{% endblock %}
