Improved style and layout of "detail_table" and "filebrowser".
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@913 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -237,14 +237,12 @@ th.auto { width: 6%; }
 th.boolean { width: 8%; }
 th.char, th.email, th.url { width: 20%; }
 th.char_choices { width: 10%; }
-th.actions { width: 16px; }
+th.actions { width: auto; }
 
 td.number { text-align: right; }
 
 td .actions {
     float: right;
-    margin-right: -10px;
-    margin-left: 10px;
 }
 
 td .yes, td .no {
