Improved product list.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@918 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -237,13 +237,11 @@ th.auto { width: 6%; }
 th.boolean { width: 8%; }
 th.char, th.email, th.url { width: 20%; }
 th.char_choices { width: 10%; }
-th.actions { width: auto; }
+th.actions { max-width: 16px; }
 
 td.number { text-align: right; }
 
-td .actions {
-    float: right;
-}
+td .actions { float: right; }
 
 td .yes, td .no {
     display: block;
