--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -235,9 +235,9 @@ tr.altrow td { background-color: #f8f8f8; }
 
 th.auto { width: 6%; }
 th.boolean { width: 9%; }
-th.char, th.email, th.url { max-width: 20%; }
-th.char_choices { max-width: 10%; }
-th.actions { max-width: 16px; }
+th.char, th.email, th.url { width: 17%; }
+th.char_choices { width: 10%; }
+th.actions { width: 16px; }
 
 td.number { text-align: right; }
 
