Improved media management.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@942 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/hr/leaverequest_edit.html
+++ b/themes/default/templates/hr/leaverequest_edit.html
@@ -4,6 +4,11 @@
 {% load breadcrumbs %}
 {% load details %}
 
+{% block extrahead %}
+{{ dform.media }}
+{{ form.media }}
+{% endblock %}
+
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
     {% add_crumb 'Leave requests' 'leaverequest_list' %}
