--- a/themes/default/templates/hr/employee_edit.html
+++ b/themes/default/templates/hr/employee_edit.html
@@ -3,6 +3,11 @@
 {% load breadcrumbs %}
 {% load details %}
 
+{% block extrahead %}
+{{ jform.media }}
+{{ form.media }}
+{% endblock %}
+
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
     {% add_crumb 'Employees' 'employee_list' %}
