--- a/themes/default/templates/hr/expensevoucher_edit.html
+++ b/themes/default/templates/hr/expensevoucher_edit.html
@@ -4,6 +4,12 @@
 {% load breadcrumbs %}
 {% load details %}
 
+{% block extrahead %}
+{{ dform.media }}
+{{ form.media }}
+{{ formset.media }}
+{% endblock %}
+
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
     {% add_crumb 'Expense vouchers' 'expensevoucher_list' %}
