--- a/themes/default/templates/knowledge/poll_edit.html
+++ b/themes/default/templates/knowledge/poll_edit.html
@@ -4,6 +4,11 @@
 {% load breadcrumbs %}
 {% load details %}
 
+{% block extrahead %}
+{{ form.media }}
+{{ formset.media }}
+{% endblock %}
+
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
     {% add_crumb 'Polls' '/polls/' %}
