--- a/themes/default/templates/partners/letter_edit.html
+++ b/themes/default/templates/partners/letter_edit.html
@@ -3,6 +3,11 @@
 {% load breadcrumbs %}
 {% load details %}
 
+{% block extrahead %}
+{{ dform.media }}
+{{ form.media }}
+{% endblock %}
+
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
     {% add_crumb 'Letters' 'letter_list' %}
