--- a/themes/default/templates/calendar/event_year.html
+++ b/themes/default/templates/calendar/event_year.html
@@ -11,6 +11,11 @@
 
 {% block subtitle %}{% trans "Year" %}{% endblock %}
 
+{% block extrahead %}
+{{ block.super }}
+<link rel="stylesheet" href="{{ STATIC_URL }}css/calendar.css" type="text/css" media="all"/>
+{% endblock %}
+
 {% block section %}
 <div class="calendar">
     <div class="year">
