--- a/settings/base.py.tmpl
+++ b/settings/base.py.tmpl
@@ -135,12 +135,12 @@ TEMPLATE_LOADERS = (
 # Each one should be a callable that takes the request object as its
 # only parameter and returns a dictionary to add to the context.
 TEMPLATE_CONTEXT_PROCESSORS = (
-    'django.core.context_processors.auth',
     'django.core.context_processors.debug',
     'django.core.context_processors.i18n',
     'django.core.context_processors.media',
     'django.core.context_processors.static',
     'django.core.context_processors.request',
+    'django.contrib.auth.context_processors.auth',
     'django.contrib.messages.context_processors.messages',
 )
 
