Replaced "Letter" model with a more genric "Communication" model which has a new "type" field.

--- a/themes/default/templates/partners/communication_delete.html
+++ b/themes/default/templates/partners/communication_delete.html
@@ -4,7 +4,7 @@
 
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
-    {% add_crumb 'Letters' 'letter_list' %}
+    {% add_crumb 'Communications' 'communication_list' %}
     {% add_crumb object object.get_absolute_url %}
     {% add_crumb 'Delete' %}
 {% endblock %}
