--- a/themes/default/templates/calendar/event_detail.html
+++ b/themes/default/templates/calendar/event_detail.html
@@ -32,10 +32,10 @@
 <li class="export"><a title="{% trans 'Export event to an .ics file' %}" href="{% url event_export object.pk %}">{% trans 'Export' %}</a></li>
 {% endif %}
 {% if object.pk in obj_perms.calendar.view_event %}
-{% if user not in object.stream.followers.all %}
-<li class="follow"><a title="{% trans 'Follow' %}" href="{% url stream_follow object.stream request.path %}">{% trans 'Follow' %}</a></li>
+{% if user not in object.followers %}
+<li class="follow"><a title="{% trans 'Follow' %}" href="{% url object_follow 'events' object.pk request.path %}">{% trans 'Follow' %}</a></li>
 {% else %}
-<li class="leave"><a title="{% trans 'Leave' %}" href="{% url stream_leave object.stream request.path %}">{% trans 'Leave' %}</a></li>
+<li class="unfollow"><a title="{% trans 'Unfollow' %}" href="{% url object_unfollow 'events' object.pk request.path %}">{% trans 'Unfollow' %}</a></li>
 {% endif %}
 {% endif %}
 {% endblock %}
