--- a/themes/default/templates/auth/userarea.html
+++ b/themes/default/templates/auth/userarea.html
@@ -4,8 +4,8 @@
 {% if user.is_authenticated %}
 <span class="profile">
     <a href="{% url user_detail user.username %}"><strong>{{ user }}</strong></a>
-    {% with user.notification_set.unread|length as notification_count %}
-    <a class="notification-counter" title="{% blocktrans %}{{ notification_count }} unread notification(s){% endblocktrans %}" href="{% url notification_list user.username %}">{{ notification_count }}</a>
+    {% with user.notification_set.unread.count as notification_count %}
+    <a class="notification-counter" title="{% blocktrans %}{{ notification_count }} unread notification(s){% endblocktrans %}" href="{% url notification_list 'users' user.pk %}">{{ notification_count }}</a>
     {% endwith %}
 </span>
 {% menu "user_area_logged" %}
